Added pagination endpoints for district & contacts